# multi-agent-customer-chat

./: .gitignore  README.md  all_app_docker.yml  docker-compose.yml  env.example
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  api.py  cache.py  config.py  database.py  gemini_client.py  main.py  models.py  websocket.py  workflow.py
backend/app/agents/: __init__.py  base_agent.py  escalation.py  faq.py  guardrails.py  router.py  support.py
backend/scripts/: init.sql
backend/test/: README.md  run_all_tests.py  test_agents.py  test_cache_database.py  test_guardrails.py  test_infrastructure.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_workflow_integration.py
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/chat/: page.tsx
frontend/app/hooks/: useChat.ts
frontend/components/: chat-interface.tsx  connection-status.tsx  message-input.tsx
frontend/lib/: websocket.ts
