[project]
name = "multi-agent-customer-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn[standard]==0.35.0", 
    "websockets==14.0",
    "google-genai==1.25.0",
    "langgraph==0.5.2",
    "asyncpg==0.30.0",
    "redis==6.2.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.8.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",
    "aiohttp==3.10.2"
]
